# HGEP

./: CMakeLists.txt  README.md  setup.sh  structure.txt
Dependencies/GLAD/: CMakeLists.txt  Makefile  cmake_install.cmake
Dependencies/GLAD/include/glad/: gl.h
Dependencies/GLAD/src/: gl.c
Dependencies/GLFW/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
Dependencies/GLFW/src/: Makefile  cmake_install.cmake
src/: main.cpp  shader.h
src/OLD/: main.cpp  shader.cpp  shader.frag  shader.vert
